# movie_database

./: LICENSE  README.md  pyproject.toml  requeriments.txt
data/: movies_dataset.csv  paises_mundo.csv
docs/: setup_guide.md
src/: cli.py  config.py  database.py  exceptions.py  models.py  validations.py
tests/: test_models.py
